# cpp_design_pattern

./: CMakeLists.txt  Dockerfile
docs/: guideline15.md  (+12 more)
src/: CMakeLists.txt  main.cc
src/Guideline15/: CMakeLists.txt  circle.cc  circle.hh  draw_all_shapes.cc  draw_all_shapes.hh  draw_circle.cc  draw_circle.hh  draw_square.cc  draw_square.hh  execute.cc  execute.hh  point.hh  shape.hh  square.cc  square.hh
src/Guideline16/: CMakeLists.txt  circle.cc  circle.hh  draw.cc  draw.hh  draw_all_shapes.cc  draw_all_shapes.hh  draw_circle.cc  draw_circle.hh  draw_square.cc  draw_square.hh  execute.cc  execute.hh  point.hh  shape.hh  shape_visitor.hh  square.cc  square.hh
src/Guideline17/: CMakeLists.txt  circle.cc  circle.hh  draw.cc  draw.hh  draw_all_shapes.cc  draw_all_shapes.hh  draw_circle.cc  draw_circle.hh  draw_square.cc  draw_square.hh  execute.cc  execute.hh  point.hh  shape.hh  shape_visitor.hh  shapes.hh  square.cc  square.hh  variant.cc  variant.hh
src/Guideline18/: CMakeLists.txt  abstract_visitor.hh  circle.hh  draw.cc  draw.hh  execute.cc  execute.hh  point.hh  shape.hh  square.hh  visitor.hh
src/Guideline19/: CMakeLists.txt  circle.hh  draw_strategy.hh  execute.cc  execute.hh  open_gl_circle_strategy.hh  open_gl_square_strategy.hh  point.hh  shape.hh  square.hh
src/Guideline2/: CMakeLists.txt  conference_ticket.hh  cpp_book.hh  documents.cc  documents.hh  execute.cc  execute.hh  item.hh  json.cc  json.hh  money.hh  serialization.cc  serialization.hh  users.cc  users.hh
src/Guideline21/: CMakeLists.txt  add.hh  calculate_command.hh  calculator.cc  calculator.hh  execute.cc  execute.hh  subtract.hh
src/Guideline22/: CMakeLists.txt  execute.cc  execute.hh
(+77 files in other folders)
